[project]
name = "changeformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "einops>=0.8.1",
    "numpy>=1.24.4",
    "opencv-python>=4.11.0.86",
    "scipy>=1.10.1",
    "tifffile>=2023.7.10",
    "timm>=1.0.15",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
